--- a/#src/index.html
+++ b/#src/index.html
@@ -9,23 +9,7 @@
 			<main class="page">
 				<section class="intro">
 					<div class="intro__container _container">
-						<div class="intro__body">
-							<div class="intro__content">
-								<div class="intro__logo _ibg">
-									<img src="./img/intro/logo.png" alt="Festival logo">
-								</div>
-								<div class="intro__text">17/06 - 19/06<br>Калуга, Октябрьская 17а</div>
-								<div class="intro__labels">
-									<div class="intro__image"><img src="./img/intro/2.webp" alt="ИКЦ"></div>
-									<div class="intro__image"><img src="./img/intro/Coat_of_arms_of_Kalu.svg" alt="Правительство Калуга"></div>
-								</div>
-							</div>
-							<div class="intro__main-image intro-hand">
-								<div class="intro-hand__image _ibg">
-									<img src="./img/intro/hand.png" alt="">
-								</div>
-							</div>
-						</div>
+
 					</div>
 				</section>
 				<section class="philosophy" id="philosophy">
@@ -143,9 +127,9 @@
 						<div class="program__body">
 							<div class="program__billboard billboard">
 								<div class="billboard__header">
-									<div class="billboard__date">Пятница, 11 июня</div>
+									<div class="billboard__date">Пятница, 17 июня</div>
 									<div class="billboard__title">
-										<h3>Открытие фестиваля Млечный путь!</h3>
+										<h3>Открытие фестиваля «Млечный путь. Вне граней и орбит. Чижевский.»</h3>
 									</div>
 								</div>
 								<div class="billboard__content">
@@ -155,28 +139,31 @@
 											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard1.webp" alt="Афиша фестиваля Млечный путь">
 										</div>
-										<div class="billboard__image-item _ibg pb100">
+<!--										<div class="billboard__image-item _ibg pb100">
 											<div class="billboard__overlay"></div>
 											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard2.webp" alt="Афиша Город Космос Люди">
-										</div>
+										</div>-->
 									</div>
 									<div class="billboard__program">
-										<p>19.00 - Вернисаж выставки мастеров современной керамики. Локация – Выставочный зал ИКЦ.</p>
-										<p>19.00 - Перформанс «Млечный Путь» Инновационного Театра Балета ИКЦ . Руководитель - Ксения Голыжбина. Локация - Выставочный зал ИКЦ.</p>
-										<p>20.00 - Открытие фотовыставки Лёли Васильевой «Город. Космос. Люди.», г. Калуга. Локация - Фойе ИКЦ.</p>
+										<p>18.30 - 20.00 - Вернисаж работ участников фестиваля. (17июня -1 июля). Локация-Выставочный зал ИКЦ.</p>
+										<p>18.30- Перформанс от ИТБ.  Руководитель-Ксения Голыжбина. Локация-Выставочный зал ИКЦ.</p>
+										<p>
+											19.30- Концерт Jazzatov Giga Band Летний лаунж в ИКЦ. Танцевальный партнер. Локация - зал-трансформер ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://quicktickets.ru/kaluga-ikc/s84" target="_blank">Купить билеты...</a>
+										</p>
 									</div>
 								</div>
 							</div>
 							<div class="program__billboard billboard">
 								<div class="billboard__header">
-									<div class="billboard__date">Суббота, 12 июня</div>
+									<div class="billboard__date">Суббота, 18 июня</div>
 									<div class="billboard__title">
 									</div>
 								</div>
 								<div class="billboard__content">
 									<div class="billboard__images">
-										<div class="billboard__image-item _ibg pb177">
+										<!--<div class="billboard__image-item _ibg pb177">
 											<div class="billboard__overlay">
 											</div>
 											<button class="billboard__button _icon-search"></button>
@@ -187,31 +174,66 @@
 											</div>
 											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard4.webp" alt="DJ Uncle Deep">
-										</div>
+										</div>-->
 									</div>
 									<div class="billboard__program">
-										<p>12.00 – Керамический маркет: авторская керамика. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
-										<p>12.00 - Фуд-корт. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
-										<p>12.00 - Мастер-класс по керамике: «Как создавался пласт Марсианин». Андрианова Анна & Воробьев Валерий, г. Сергиев Посад.</p>
-										<p>13.00 - Мастер-класс по керамике: «Пласт и его возможности. Ваза и другие формы». Решетников Виктор, г. Москва.</p>
-										<p>14.00 - Мастер-класс по керамике: «Мелкая пластика. Сова». Гамбарян Елена, г. Москва.</p>
-										<p>15.00 - Мастер-класс по керамике: «Летнее чаепитие. Пиала из жгутов». Марамыгина Анна, г. Москва.</p>
-										<p>16.00 - Мастер-класс по керамике: «Лето на память. Небольшие емкости с отпечатками растений». Зотова Алена, г.Москва.</p>
-										<p>17.00 - Мастер-класс по керамике: «Декоративный перец». Миниахметова Надия, г. Санкт-Петербург.</p>
-										<p>19.00 - Хореографический спектакль-перформанс «Серебряные облака». Посвящение Энди Уорхолу. При участии группы «Абстракция в керамике» и ансамбля танца «Образ». Хореограф-Юлия Бычкова. Локация - зал-трансформер ИКЦ.</p>
-										<p>20.00 - DJ. Электронная музыка. Локация - Внутренний дворик ИКЦ.</p>
+										<p>11.00 - 19.30 - Space session. Локация - внутренняя зона ИКЦ.</p>
+										<p>11.00 - 19.30 – Керамический Маркет. Локация - внутренняя зона ИКЦ.</p>
+										<p>11.00 - 19.30 - Работа фуд-корта. Локация - внутренняя зона ИКЦ.</p>
+										<p>
+											11.00 - 12.00 - Мастер-класс  Анна Марамыгина (Москва/Санкт-Петербург). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057797/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											11.00 - 12.00 - Мастер-класс  Ирина Жарикова (Санкт-Петербург). Локация - внутренняя зона ИКЦ. <br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057801/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>12.00 - Солист Jazzatov Giga Band Андрей Игонин- саксофон. Локация - внутренняя зона ИКЦ.</p>
+										<p>
+											13.00 - 14.00 - Мастер-класс Константин Становов (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057819/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											13.00 - 14.00 - Мастер-класс Александр Сафроненков (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057821/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>14.00 - Солист Jazzatov Giga Band Остап Альтман- альт. Локация - внутренняя зона ИКЦ.</p>
+										<p>
+											15.00 - 16.00 - Мастер-класс Маргарита Камардина (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057831/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>15.00 - 16.00 - Мастер-класс Татьяна Дидковская (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057834/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>16.00 - Солист Jazzatov Giga Band Андрей Игонин- саксофон. Локация - внутренняя зона ИКЦ.</p>
+										<p>
+											16.30 - 17.30 - Мастер-класс Инга Самурская-Визель (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057839/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>16.30 - 17.30 - Мастер-класс Юлия Черкасова (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057843/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											18.00 - 19.00 - Мастер-класс Григор Балбанян (Ереван/Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057850/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											19.30 - Концерт Jazzatov Giga Band Летний лаунж в ИКЦ. Танцевальный партер. Локация - зал-трансформер ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://quicktickets.ru/kaluga-ikc/s85" target="_blank">Купить билеты...</a>
+										</p>
 									</div>
 								</div>
 							</div>
 							<div class="program__billboard billboard">
 								<div class="billboard__header">
-									<div class="billboard__date">Воскресенье, 13 июня</div>
+									<div class="billboard__date">Воскресенье, 19 июня</div>
 									<div class="billboard__title">
+										<h3>Закрытие фестиваля</h3>
 									</div>
 								</div>
 								<div class="billboard__content">
 									<div class="billboard__images">
-										<div class="billboard__image-item _ibg pb177">
+<!--										<div class="billboard__image-item _ibg pb177">
 											<div class="billboard__overlay">
 											</div>
 											<button class="billboard__button _icon-search"></button>
@@ -222,77 +244,34 @@
 											</div>
 											<button class="billboard__button _icon-search"></button>
 											<img src="./img/programs/billboard6.webp" alt="DJ arcttic">
-										</div>
+										</div>-->
 									</div>
 									<div class="billboard__program">
-										<p>11.00 - Кураторская экскурсия по выставке от Ольги Равинской, г. Москва. Локация - Выставочный зал.</p>
-										<p>12.00 - Керамический маркет: авторская керамика. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
-										<p>12.00 - Фуд-корт. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
-										<p>12.00 - Мастер-класс по керамике: «Что такое маскарон и как его сделать из глины». Семенова Елизавета, г.Москва.</p>
-										<p>13.00 - Мастер-класс по керамике: «Подставка Луч. Как работать с выкройкой и пластом, немного о конструировании и тиражировании». Визель Инга, г.Москва.</p>
-										<p>14.00 - Мастер-класс по керамике: «Керамическая птаха. Как слепить условную декоративную скульптуру». Веремеенко Виктория, г. Москва.</p>
-										<p>14.00 - Мастер-класс по керамике: «Что такое отминка в форму и как сделать небольшую мисочку». Веремеенко Иван, г. Москва</p>
-										<p>15.00 - Мастер-класс на гончарном круге «Космос. Калуга-650»: Балбабян Григор, г. Ереван.</p>
-										<p>16.30 - Перформанс «Ты - мой Космос». Студия «Тодес». г. Калуга. Руководитель - Оксана Евдокимова. Локация - Внутренний двор ИКЦ.</p>
-										<p>17.00 - Показ коллекции одежды из войлока «Космическое возрождение традиций» при участии танцевальной лаборатии ТЕКТ и Инновационного Театра Балета ИКЦ. Автор: дизайнер – фелтмейкер Лидия Утенкова. Локация - Внутренний двор ИКЦ.</p>
-										<p>18.00 - DJ. Электронная музыка. Локация - Внутренний дворик ИКЦ.</p>
-									</div>
-								</div>
-							</div>
-							<div class="program__billboard billboard">
-								<div class="billboard__header">
-									<div class="billboard__date">Понедельник, 14 июня</div>
-									<div class="billboard__title">
-										<h3>Закрытие фестиваля - Калуга-650!</h3>
-									</div>
-								</div>
-								<div class="billboard__content">
-									<div class="billboard__images">
-										<div class="billboard__image-item _ibg pb100">
-											<div class="billboard__overlay">
-											</div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard7.webp" alt="Афиша Перфоманс по творчеству Рене Магритта">
-										</div>
-										<div class="billboard__image-item _ibg pb100">
-											<div class="billboard__overlay">
-											</div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard8.webp" alt="Афиша Кавер группы Папа Гнома и Белов">
-										</div>
-										<div class="billboard__image-item _ibg pb100">
-											<div class="billboard__overlay">
-											</div>
-											<button class="billboard__button _icon-search"></button>
-											<img src="./img/programs/billboard9.webp" alt="DJ Eywa">
-										</div>
-									</div>
-									<div class="billboard__program">
-										<p>12.00 – Керамический маркет: авторская керамика. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области.</p>
-										<p>12.00 - Фуд-корт. Локация - Внутренний дворик ИКЦ. При поддержке ТПП Калужской области</p>
-										<p>12.00 - Мастер-класс по керамике «Калуга-650 лет»: Ирина Левитина, г. Калуга.</p>
-										<p>13.00 - Мастер-класс по керамике «Калуга-650 лет»: Олеся Рудченко, г. Калуга.</p>
-										<p>14.00 - Мастер-класс по керамике «Калуга-650»: ДПИКЦ «Достояние», г. Калуга.</p>
-										<p>15.00 - Флэшмоб «Если бы Космос был глиной»: ФМИ «Любомир» & Мастерская керамики ИКЦ, Татьяна Полубинская , г. Калуга .</p>
-										<p>16.00- Мастер-класс: Керамотерапия. «Трансформация. Единение. Космический ресурс.»: «Центр Современного Образования» & Мастерская керамики ИКЦ, Татьяна Полубинская, г. Калуга.</p>
-										<p>17.00 - Мастер-класс на гончарном круге «Космос. Калуга-650»: Балбабян Григор, г. Ереван</p>
-										<p>18.00 - Перформанс «Сын Человеческий. Рене Магритт». Хореограф Тимофей Хохлов. При участии ансамбля танца «Образ». Локация- Внутренний дворик ИКЦ.</p>
-										<p>19.00 - Музыкальный концерт. Кавер-группа «Папа Гнома и Белов». Локация - Внутренний двор ИКЦ.</p>
-										<p>20.00 - DJ. Электронная музыка. Локация - Внутренний дворик ИКЦ.</p>
+										<p>12.00-17.00- Space session. Локация - внутренняя зона ИКЦ.</p>
+										<p>12.00-17.00 – Керамический Маркет. Локация - внутренняя зона ИКЦ.</p>
+										<p>12.00-17.00 - Работа фуд-корта. Локация - внутренняя зона ИКЦ.</p>
+										<p>
+											12.00-13.00- Мастер-класс Ольга Равинская (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057852/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											12.00-13.00- Мастер-класс Ольга Хан (Москва). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057871/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											13.30-14.30- Мастер-класс Олеся Рудченко (Калуга). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057877/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											13.30-14.30- Мастер-класс Ирина Левитина (Калуга). Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057886/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>15.00- 17 .00 -Телескоп-Пати. Смотрим на Солнце в телескопы с Калужским обществом любителей астрономии «Урания». Локация - Арт-парк ИКЦ.</p>
+										<p>Закрытие фестиваля. DJ-сет. Локация - Арт-парк ИКЦ.</p>
 									</div>
 								</div>
 							</div>
 						</div>
-					</div>
-				</section>
-				<section class="registration">
-					<div class="registration__container _container">
-						<h3 class="registration__title">
-							Регистрация на мастер классы
-							<a href="https://www.icc40.ru/calendar/events/master-klassy-po-keramike-festival-mlechnyy-put" target="_blank">
-								здесь
-							</a>
-						</h3>
 					</div>
 				</section>
 				<section class="partners" id="partners">
@@ -307,39 +286,39 @@
 								<div class="item-partners__image">
 									<img src="./img/partners/2.png" alt="Государственный музей истории космонавтики им.К.Э.Циолковского">
 								</div>
-								<div class="item-partners__image">
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/3.png" alt="Любомир">
-								</div>
-								<div class="item-partners__image">
+								</div>-->
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/4.png" alt="Обучение и развитие">
-								</div>
+								</div>-->
 								<div class="item-partners__image">
 									<img src="./img/partners/5.png" alt="ТВ">
 								</div>
-								<div class="item-partners__image">
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/6.png" alt="Достояние">
-								</div>
-								<div class="item-partners__image">
+								</div>-->
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/7.png" alt="Sky-lounge">
-								</div>
-								<div class="item-partners__image">
+								</div>-->
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/8.png" alt="МГЕР">
-								</div>
-								<div class="item-partners__image">
+								</div>-->
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/9.png" alt="TODOES Kaluga family 1371">
-								</div>
-								<div class="item-partners__image">
+								</div>-->
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/10.png" alt="Образ Ансамбль танца">
-								</div>
+								</div>-->
 								<div class="item-partners__image">
 									<img src="./img/partners/11.png" alt="Suhl гостиница">
 								</div>
 								<div class="item-partners__image">
 									<img src="./img/partners/12.png" alt="Инновационный театр балета">
 								</div>
-								<div class="item-partners__image">
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/13.png" alt="Танцевальная лаборатория">
-								</div>
+								</div>-->
 							</div>
 						</div>
 						<section class="divider">
