Added new video, fixed header pages

--- a/#src/index.html
+++ b/#src/index.html
@@ -9,7 +9,6 @@
 			<main class="page">
 				<section class="intro">
 					<div class="intro__container _container">
-
 					</div>
 				</section>
 				<section class="philosophy" id="philosophy">
@@ -218,6 +217,10 @@
 											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057850/" target="_blank">Зарегистрироваться...</a>
 										</p>
 										<p>
+											18.00 - 19.00 - Мастер-класс по гончарному делу от Карины Саитовой. Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2064314/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
 											19.30 - Концерт Jazzatov Giga Band Летний лаунж в ИКЦ. Танцевальный партер. Локация - зал-трансформер ИКЦ.<br>
 											<a class="billboard__reg-link" href="https://quicktickets.ru/kaluga-ikc/s85" target="_blank">Купить билеты...</a>
 										</p>
@@ -251,22 +254,30 @@
 										<p>12.00-17.00 – Керамический Маркет. Локация - внутренняя зона ИКЦ.</p>
 										<p>12.00-17.00 - Работа фуд-корта. Локация - внутренняя зона ИКЦ.</p>
 										<p>
-											12.00-13.00- Мастер-класс Ольга Равинская (Москва). Локация - внутренняя зона ИКЦ.<br>
+											12.00-13.00 - Мастер-класс Ольга Равинская (Москва). Локация - внутренняя зона ИКЦ.<br>
 											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057852/" target="_blank">Зарегистрироваться...</a>
 										</p>
 										<p>
-											12.00-13.00- Мастер-класс Ольга Хан (Москва). Локация - внутренняя зона ИКЦ.<br>
+											12.00-13.00 - Мастер-класс Ольга Хан (Москва). Локация - внутренняя зона ИКЦ.<br>
 											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057871/" target="_blank">Зарегистрироваться...</a>
 										</p>
 										<p>
-											13.30-14.30- Мастер-класс Олеся Рудченко (Калуга). Локация - внутренняя зона ИКЦ.<br>
+											12.00-13.00 - Мастер-класс по гончарному делу от Григора Балбаняна. Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2064316/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											13.30-14.30 - Мастер-класс Олеся Рудченко (Калуга). Локация - внутренняя зона ИКЦ.<br>
 											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057877/" target="_blank">Зарегистрироваться...</a>
 										</p>
 										<p>
-											13.30-14.30- Мастер-класс Ирина Левитина (Калуга). Локация - внутренняя зона ИКЦ.<br>
+											13.30-14.30 - Мастер-класс по керамике от Анастасии Базановой и Карины Саитовой. Локация - внутренняя зона ИКЦ.<br>
+											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2064322/" target="_blank">Зарегистрироваться...</a>
+										</p>
+										<p>
+											13.30-14.30 - Мастер-класс Ирина Левитина (Калуга). Локация - внутренняя зона ИКЦ.<br>
 											<a class="billboard__reg-link" href="https://icc-40.timepad.ru/event/2057886/" target="_blank">Зарегистрироваться...</a>
 										</p>
-										<p>15.00- 17 .00 -Телескоп-Пати. Смотрим на Солнце в телескопы с Калужским обществом любителей астрономии «Урания». Локация - Арт-парк ИКЦ.</p>
+										<p>15.00 - 17 .00 -Телескоп-Пати. Смотрим на Солнце в телескопы с Калужским обществом любителей астрономии «Урания». Локация - Арт-парк ИКЦ.</p>
 										<p>Закрытие фестиваля. DJ-сет. Локация - Арт-парк ИКЦ.</p>
 									</div>
 								</div>
