--- a/#src/photos.html
+++ b/#src/photos.html
@@ -9,31 +9,12 @@
     <main class="page">
         <section class="intro">
             <div class="intro__container _container">
-                <div class="intro__body">
-                    <div class="intro__content">
-                        <div class="intro__logo _ibg">
-                            <img src="./img/intro/logo.png" alt="Festival logo">
-                        </div>
-                        <div class="intro__text">11/06 - 14/06<br>Калуга, Октябрьская 17а</div>
-                        <div class="intro__labels">
-                            <div class="intro__image"><img src="./img/intro/650.png" alt="650 лет Калуга"></div>
-                            <div class="intro__image"><img src="./img/intro/2.webp" alt="ИКЦ"></div>
-                            <div class="intro__image"><img src="./img/intro/Coat_of_arms_of_Kalu.svg" alt="Правительство Калуга"></div>
-                            <div class="intro__image"><img src="./img/intro/4.webp" alt="Гагарин Калуга"></div>
-                        </div>
-                    </div>
-                    <div class="intro__main-image intro-hand">
-                        <div class="intro-hand__image _ibg">
-                            <img src="./img/intro/hand.png" alt="">
-                        </div>
-                    </div>
-                </div>
             </div>
         </section>
         <section class="fest-video">
             <div class="fest-video__container _container">
                 <div style="padding:56.25% 0 0 0;position:relative;">
-                    <iframe src="//player.vimeo.com/video/572081853?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ffffff" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="кер фест1V2.mp4"></iframe>
+                    <iframe src="//player.vimeo.com/video/717559078?title=0&amp;byline=0&amp;portrait=0&amp;badge=0&amp;color=ffffff" frameborder="0" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="" style="position:absolute;top:0;left:0;width:100%;height:100%;" title="ceramicfest2022.mp4"></iframe>
                 </div>
                 <script src="https://player.vimeo.com/api/player.js"></script>
             </div>
