Added new partner icon - academy

--- a/#src/index.html
+++ b/#src/index.html
@@ -327,9 +327,9 @@
 								<div class="item-partners__image">
 									<img src="./img/partners/12.png" alt="Инновационный театр балета">
 								</div>
-<!--								<div class="item-partners__image">
-									<img src="./img/partners/13.png" alt="Танцевальная лаборатория">
-								</div>-->
+								<div class="item-partners__image">
+									<img src="./img/partners/22.jpg" alt="Академия керамики">
+								</div>
 							</div>
 						</div>
 						<section class="divider">
