--- a/#src/index.html
+++ b/#src/index.html
@@ -330,6 +330,9 @@
 								<div class="item-partners__image">
 									<img src="./img/partners/22.jpg" alt="Академия керамики">
 								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/23.jpg" alt="Музей Чижевского">
+								</div>
 							</div>
 						</div>
 						<section class="divider">
