Added Hilton partner

--- a/#src/index.html
+++ b/#src/index.html
@@ -333,6 +333,9 @@
 								<div class="item-partners__image">
 									<img src="./img/partners/23.jpg" alt="Музей Чижевского">
 								</div>
+								<div class="item-partners__image">
+									<img src="./img/partners/24.jpg" alt="Хилтон">
+								</div>
 							</div>
 						</div>
 						<section class="divider">
