--- a/#src/index.html
+++ b/#src/index.html
@@ -14,7 +14,17 @@
 				<section class="philosophy" id="philosophy">
 					<div class="philosophy__container _container">
 						<h2 class="philosophy__title">Философия фестиваля «Млечный Путь»</h2>
-						<div class="philosophy__text">Космос всегда остается загадочным и притягательным для человека. Глядя в темное небо, мы мечтаем и любим, философствуем и придумываем. «Млечный Путь» - как раз об этом. О загадочности, о хрупкости, о моменте, о красоте, о человеке, о его месте в этой Вселенной.</div>
+						<div class="philosophy__text">
+							<b><i>Посвящается 125-летию А.Л. Чижевского</b> <br>
+							«Жить гению в цепях не надлежит,<br>
+							Великое равняется свободе,<br>
+							И движется вне граней и орбит,<br>
+							Не подчиняясь людям, ни природе»</i><br><br>
+
+							Фестиваль керамики «Млечный путь» проходит под эгидой творческого гения Александра Чижевского!
+							И наши участники будут вдохновляться его творениями – знаменитой люстрой, картинами, стихами. Но главной музой будет Солнце – изучению которого Чижевский посвятил всю жизни! <br><br>
+							Девиз фестиваля «Млечный путь» в этом году подразумевает полное отсутствие граней и орбит… всё по Чижевскому…
+						</div>
 					</div>
 				</section>
 				<section class="divider">
@@ -291,9 +301,9 @@
 							<h3 class="item-partners__title title">Партнеры</h3>
 							<div class="item-partners__intro">Если вы хотите стать партнером фестиваля, свяжитесь с нами, мы обсудим детали.</div>
 							<div class="item-partners__logos">
-								<div class="item-partners__image">
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/1.png" alt="Торгово-промышленная палата Калужской области">
-								</div>
+								</div>-->
 								<div class="item-partners__image">
 									<img src="./img/partners/2.png" alt="Государственный музей истории космонавтики им.К.Э.Циолковского">
 								</div>
@@ -303,9 +313,9 @@
 <!--								<div class="item-partners__image">
 									<img src="./img/partners/4.png" alt="Обучение и развитие">
 								</div>-->
-								<div class="item-partners__image">
+<!--								<div class="item-partners__image">
 									<img src="./img/partners/5.png" alt="ТВ">
-								</div>
+								</div>-->
 <!--								<div class="item-partners__image">
 									<img src="./img/partners/6.png" alt="Достояние">
 								</div>-->
