--- a/#src/index.html
+++ b/#src/index.html
@@ -36,12 +36,25 @@
 					<div class="aboutus__container _container">
 						<h3 class="aboutus__title title">Что пишут о нас в СМИ</h3>
 						<div class="aboutus__content">
-							<a href="https://nedelya40.ru/uorhol-magritt-i-chashi-terpeniya-v-kaluge-proshel-festival-sovremennoj-keramiki-mlechnyj-put_142844/" class="aboutus__smi" target="_blank" rel="noopener">
-									<img src="./img/aboutus/kaluga_week.webp" alt="Калужская неделя">
+							<a href="https://gtrk-kaluga.ru/otkrytaya-studiya/audio-6904" class="aboutus__smi" target="_blank" rel="noopener">
+									<img src="./img/aboutus/gtrk-russia.png" alt="Калужская неделя">
 							</a>
-							<a href="https://nikatv.ru/tv/programs/kulturnaya-sreda/EAdJhEP2UXa2VJ6X4v93" class="aboutus__smi" target="_blank" rel="noopener">
-									<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
+							<a href="https://gtrk-kaluga.ru/news/kultura/news-35502" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/gtrk-russia.png" alt="Калужская неделя">
 							</a>
+							<a href="https://gtrk-kaluga.ru/utro-rossii-kaluga/video-6893" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/gtrk-russia.png" alt="Калужская неделя">
+							</a>
+							<a href="https://nikatv.ru/tv/programs/utro-pervyh/UkcKKnuzCip4fjq6posY" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
+							</a>
+							<a href="https://nikatv.ru/tv/reportazhi-video/MOFwpdnKGeso5tXyYoIo?utm_source=yxnews&utm_medium=desktop&utm_referrer=https%3A%2F%2Fyandex.ru%2Fnews%2Fsearch%3Ftext%3D" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
+							</a>
+							<a href="https://nedelya40.ru/vne-granej-i-orbit_175931/" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/nedelya40.png" alt="Неделя 40">
+							</a>
+
 						</div>
 					</div>
 				</section>
