--- a/#src/photos.html
+++ b/#src/photos.html
@@ -19,7 +19,7 @@
                 <script src="https://player.vimeo.com/api/player.js"></script>
             </div>
         </section>
-        <section class="photos">
+<!--        <section class="photos">
             <div class="photos__container _gallery">
                 <a href="./img/photos/46.webp" class="photos__image _ibg"><img src="./img/photos/46.webp" alt="Фото с фестиваля Млечный путь"></a>
                 <a href="./img/photos/47.webp" class="photos__image _ibg"><img src="./img/photos/47.webp" alt="Фото с фестиваля Млечный путь"></a>
@@ -57,7 +57,7 @@
                 <a href="./img/photos/80.webp" class="photos__image _ibg"><img src="./img/photos/80.webp" alt="Фото с фестиваля Млечный путь"></a>
                 <a href="./img/photos/81.webp" class="photos__image _ibg"><img src="./img/photos/81.webp" alt="Фото с фестиваля Млечный путь"></a>
             </div>
-        </section>
+        </section>-->
     </main>
     @@include('_footer.html',{})
 </div>
