--- a/#src/index.html
+++ b/#src/index.html
@@ -48,13 +48,15 @@
 							<a href="https://nikatv.ru/tv/programs/utro-pervyh/UkcKKnuzCip4fjq6posY" class="aboutus__smi" target="_blank" rel="noopener">
 								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
 							</a>
-							<a href="https://nikatv.ru/tv/reportazhi-video/MOFwpdnKGeso5tXyYoIo?utm_source=yxnews&utm_medium=desktop&utm_referrer=https%3A%2F%2Fyandex.ru%2Fnews%2Fsearch%3Ftext%3D" class="aboutus__smi" target="_blank" rel="noopener">
+							<a href="https://nikatv.ru/tv/programs/kulturnaya-sreda/diWbwuT3Nb641fcvrYO4" class="aboutus__smi" target="_blank" rel="noopener">
+								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
+							</a>
+							<a href="https://nikatv.ru/tv/programs/kulturnaya-sreda/HAK1hOUVY2XPmKFxuba3" class="aboutus__smi" target="_blank" rel="noopener">
 								<img src="./img/aboutus/nikaTV.webp" alt="НикаТВ">
 							</a>
 							<a href="https://nedelya40.ru/vne-granej-i-orbit_175931/" class="aboutus__smi" target="_blank" rel="noopener">
 								<img src="./img/aboutus/nedelya40.png" alt="Неделя 40">
 							</a>
-
 						</div>
 					</div>
 				</section>
