--- a/#src/reviews.html
+++ b/#src/reviews.html
@@ -27,44 +27,118 @@
                 <h1 class="reviews__title title">Отзывы о фестивале Млечный путь</h1>
                 <div class="reviews__body">
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Удивительные работы, незабываемые ощущения! Спасибо мастерам и ИКЦ</div>
-                        <div class="item-review__author">Ольга И.</div>
-                        <div class="item-review__date">12.06.2021</div>
+                        <div class="item-review__text">Большое спасибо за такую красоту! Впечатлений очень много, настроение прекрасное! Всем участникам выставки больших творческих успехов!</div>
+                        <div class="item-review__author">Настя 11 лет, Галя 59 лет</div>
+                        <div class="item-review__date">22.06.2022г.</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Спасибо за интересные, современные работы! Особенно понравились работы Гамбарян Е., - браво!!!</div>
-                        <div class="item-review__author">Инесса М.</div>
-                        <div class="item-review__date">12.06.2021</div>
+                        <div class="item-review__text">Меня зовут Каролина. Мне 11 лет. Мне понравилась работа «Улитка BaBy»! Спасибо!</div>
+                        <div class="item-review__author">Каролина  </div>
+                        <div class="item-review__date">22.06.2022г.</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Спасибо авторам и организаторам за интересную экспозицию! Настроение поднялось не небывалую высоту! С праздником вас!</div>
-                        <div class="item-review__author">Сенина Е.В.</div>
-                        <div class="item-review__date">12.06.2021</div>
+                        <div class="item-review__text">Меня зовут Алиса. Мне 11 лет. Мне понравилась работа «Улитка BaBy» и «Прорыв»! Спасибо! Было интересно!</div>
+                        <div class="item-review__author">Алиса </div>
+                        <div class="item-review__date">22.06.2022г.</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Чаши терпения! Идея и исполнение прекрасны! Выставка удивительная. Душа и тело радуются новому! Всем добра, дорогие керамисты. Спасибо, что привезли свои работы</div>
+                        <div class="item-review__text">My name is Милена. Мне 10 лет. Мне понравился амонгус «Прорыв»! Мне понравились картины на стене! Спасибо!</div>
+                        <div class="item-review__author"> Зоя Спицына </div>
+                        <div class="item-review__date">22.06.2022г.</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Шикарная выставка! По новому взглянули на керамику! Приезжайте еще!</div>
+                        <div class="item-review__author">Зоя Спицына</div>
+                        <div class="item-review__date">23.06.2022г</div>
+                    </div>
+
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Выставка очень мне понравилась! Все  очень красиво и интересно сделано. Мне 11, но скоро 12)</div>
+                        <div class="item-review__author"> Елизавета Спицына</div>
+                        <div class="item-review__date">23.06.2022г.</div>
+                    </div>
+
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Приятно видеть изделия! Понравилось!
+                        </div>
                         <div class="item-review__author">Аноним</div>
-                        <div class="item-review__date">12.06.2021</div>
+                        <div class="item-review__date">24.06.2022г</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Космос - день России, непонятное и красивое. Письменные заметки у каждого объекта - сами по себе шедевры. Становится все понятно и непонятно о себе одновременно. Хочется плакать от новых чувств. Спасибо!</div>
+                        <div class="item-review__text">Выставка потрясающая! Работы впечатляют!</div>
                         <div class="item-review__author">Аноним</div>
-                        <div class="item-review__date">12.06.2021</div>
+                        <div class="item-review__date">24.06.2022г.</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Спасибо большое за экспозицию, погружение в мир керамики, космоса и искусства!</div>
-                        <div class="item-review__author">Соловьева В.</div>
-                        <div class="item-review__date">13.06.2021</div>
+                        <div class="item-review__text">Великолепная выставка! Очень понравились работы Анны Марамыгиной и  Ирины Левитиной «Изменяясь, воскресаю»! </div>
+                        <div class="item-review__author">Дроздовская А.А.</div>
+                        <div class="item-review__date">24.06.2022г.</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Шикарный выставочный зал. Экспонаты подобраны структурировано. Каждый искусный продукт представляет из себя прекрасное и профессиональное произведение высокого класса.</div>
-                        <div class="item-review__author">Сиуткина И.С.</div>
-                        <div class="item-review__date">14.06.2021</div>
+                        <div class="item-review__text">Потрясающая выставка «Млечный путь»! Можно окунуться в мир фантазий, иллюзий и эстетического удовольствия! Очень поразили работы-портреты из керамики! До этого никогда не видела такие! Авторы работ многогранны  и уникальны, в этом нет сомненья!
+                            Желаю творческих успехов!</div>
+                        <div class="item-review__author">Мария</div>
+                        <div class="item-review__date">25.06.2022г.</div>
                     </div>
                     <div class="reviews__item item-review">
-                        <div class="item-review__text">Потрясающая выставка и фестиваль! В экспонаты вложены огромный смысл и любовь. Хочется рядом с ними стоять и стоять, разгадывать смысл жизни и существования! Большое спасибо за работу организаторам! Работы высокого класса и мастерства. Все художники и их работы фееричны.</div>
-                        <div class="item-review__author">Ботфика Д.А.</div>
-                        <div class="item-review__date">14.06.2021</div>
+                        <div class="item-review__text">Отличная выставка, очень яркая и насыщенная гамма, вызывающая массу эмоций! Творческого вдохновения!
+                        </div>
+                        <div class="item-review__author">Юлия</div>
+                        <div class="item-review__date">25.06.2022г.</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Спасибо огромное, ребята молодцы!</div>
+                        <div class="item-review__author">25.06.2022г.</div>
+                        <div class="item-review__date">Наталия</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Огромное спасибо за праздник искусства в выходной день! Обожаю ИКЦ! Благодарность куратору, работникам и главное- авторам! Вы-супер! Море впечатлений!</div>
+                        <div class="item-review__author">Юля Митнушкина</div>
+                        <div class="item-review__date">25.06.2022г</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Благодарим за великолепное впечатление от полета фантазии, креатива и мастерства авторов работ! Браво!
+                        </div>
+                        <div class="item-review__author">Аноним</div>
+                        <div class="item-review__date">29.06.2022 г</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Очень понравилась работа «Острова» Ольги Равинской. Вот уж точно взгляд художника не знающий границ для полета фантазии!
+                            И невозможно пройти мимо работ Александра Сафроненкова: работы достойны лучших художественных музеев! Спасибо за вдохновение, полученное на экспозиции!</div>
+                        <div class="item-review__author">Котов Д.В.</div>
+                        <div class="item-review__date">29. 06.2022 г</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Маша и Ольга Сергеевна из Москвы в полном восторге от буйства форм и цветов! Шикарные работы в объеме и в задумке! Названия тонко намекают и полностью подчеркивают идею каждого произведения! Восторг от каждой работы!
+                        </div>
+                        <div class="item-review__author">Маша и Оля</div>
+                        <div class="item-review__date">29.06.2022 г.</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">За что я люблю керамику, что ей подвластно практически все! Шикарная выставка! Очень рада, что попала на нее! Вдохновения и творчества! Благодарю!</div>
+                        <div class="item-review__author">Надежда (Студия керамики «Волшебная глина» г. Магнитогорск)</div>
+                        <div class="item-review__date">30.06.2022 г.</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">На что только не способны люди! Можно заглядеться! Очень глубокие и чувственные работы! Благодарю! Авторы очень талантливые!</div>
+                        <div class="item-review__author">Яна</div>
+                        <div class="item-review__date">30.06. 2022 г</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Благодарю за удовольствие окунуться в мир искусства! Много эмоций, яркие впечатления. Хочется пожелать авторам творческих побед и большого вдохновения! Спасибо!!!</div>
+                        <div class="item-review__author">Наталья (г. Москва)</div>
+                        <div class="item-review__date">01.07.2022г.</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Было очень интересно, зрелищно и ярко! Жду с нетерпением следующую выставку! Приходите, не пожалеете!</div>
+                        <div class="item-review__author">Настя 4 класс (г. Москва)</div>
+                        <div class="item-review__date">01.07.2022 г.</div>
+                    </div>
+                    <div class="reviews__item item-review">
+                        <div class="item-review__text">Удивительные экспонаты! Как же развита человеческая фантазия! Неожиданные варианты произведений! Все удивительно и разнообразно. Очень понравилась встреча. Нас встретили, как самых желанных и долгожданных гостей. И это все- впечатление и интерес создала смотритель зала-очень милая, улыбчивая и обаятельная Леся!
+                        </div>
+                        <div class="item-review__author">Аноним</div>
+                        <div class="item-review__date">02.07. 2022 г.</div>
                     </div>
                     <div class="reviews__item item-review">
                         <div class="item-review__text">Высокая энергетика у работ:<br>
