--- a/#src/team.html
+++ b/#src/team.html
@@ -54,6 +54,15 @@
                     </div>
                     <div class="team__person person-team">
                         <div class="person-team__photo _ibg">
+                            <img src="./img/team/Егорова.webp" alt="Егорова">
+                        </div>
+                        <div class="person-team__info">
+                            <div class="person-team__name">Яна Егорова</div>
+                            <div class="person-team__position">Дизайнер, художник-модельер</div>
+                        </div>
+                    </div>
+                    <div class="team__person person-team">
+                        <div class="person-team__photo _ibg">
                             <img src="./img/team/икц.webp" alt="Команда ИКЦ">
                         </div>
                         <div class="person-team__info">
