Added history block

--- a/#src/_header.html
+++ b/#src/_header.html
@@ -1,5 +1,21 @@
 <header class="header">
 	<div class="header__content _container">
+		<div class="history">
+			<ul class="history__list">
+				<li class="history__item">
+					<a href="/2021/" class="history__link">
+						<img src="./img/history/2021.png" class="history__image" width="350" alt="Фестиваль керамика 2021 года">
+						<p class="history__year">2021</p>
+					</a>
+				</li>
+				<li class="history__item">
+					<a href="#" class="history__link">
+						<img src="./img/history/2022.png" width="350" alt="Фестиваль керамика 2022 года">
+						<p class="history__year">2022</p>
+					</a>
+				</li>
+			</ul>
+		</div>
 		<div class="header__menu menu">
 			<div class="menu__icon icon-menu">
 				<span></span>
@@ -16,8 +32,27 @@
 					<li><a href="/#partners" class="menu__link">Партнеры</a></li>
 					<li><a href="/team.html" class="menu__link">Наша команда</a></li>
 					<li><a href="/#map" class="menu__link">Место проведения</a></li>
+					<li class="menu__item-history">
+						<a href="/" class="menu__link menu__link--history">
+							<img width="40" src="./img/history.svg" alt="Иконка списка фестивалей">
+						</a>
+					</li>
 				</ul>
 				<div class="header__footer">
+					<ul class="history__list">
+						<li class="history__item">
+							<a href="/2021/" class="history__link">
+								<img src="./img/history/2021.png" class="history__image" width="350" alt="Фестиваль керамика 2021 года">
+								<p class="history__year">2021</p>
+							</a>
+						</li>
+						<li class="history__item">
+							<a href="#" class="history__link">
+								<img src="./img/history/2022.png" width="350" alt="Фестиваль керамика 2022 года">
+								<p class="history__year">2022</p>
+							</a>
+						</li>
+					</ul>
 					<div class="header__social social">
 						<a href="https://www.facebook.com/ceramicsfestkaluga/?ref=pages_you_manage" class="social__item _icon-facebook" target="_blank" rel="noopener"></a>
 						<a href="https://vk.com/ceramics_fest_kaluga" class="social__item _icon-vk" target="_blank" rel="noopener"></a>
